Added serializable info to docs, made real size of filter visible
Signed-off-by: Mark Gunlogson <mark@gunlogson.com>